fixing CSS sizing on mobile

--- a/ChatSample/wwwroot/css/Style.css
+++ b/ChatSample/wwwroot/css/Style.css
@@ -1,4 +1,6 @@
-﻿html {
+﻿
+
+html {
     background: url(../stripes.png) no-repeat center center fixed;
     background-size: cover;
 }
@@ -16,6 +18,7 @@ body, html {
     padding-right: 20px;
     padding-bottom: 20px;
     margin: 20px;
+    font-size: 2vw;
 }
 
 input[type=text] {
